Fixed Advisor Line Spacing

--- a/src/components/Advisor.css
+++ b/src/components/Advisor.css
@@ -61,7 +61,7 @@
 
 @media screen and (max-width: 414px) {
   .advisor-image {
-    margin-top: 160px;
+    margin-top: 180px;
     margin-left: -60px;
     width: 140px;
     transform: rotate(15deg);
